refactor: order update for test